[gd_scene load_steps=8 format=3 uid="uid://bwmyvyfyg1i07"]

[ext_resource type="Script" path="res://scripts/weapon_swing_melee.gd" id="1_0j34j"]
[ext_resource type="Texture2D" uid="uid://c5tuanajx314f" path="res://assets/sprites/forestSprites_ v1.2/weapons_.png" id="1_ijnk0"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4ersa"]
radius = 9.78641
height = 30.7573

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uxfag"]
radius = 3.0
height = 24.0

[sub_resource type="Animation" id="Animation_er3ou"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D/HitDetector/HitCollision2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_yclm6"]
resource_name = "swing"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.698132, 1.5708, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 4), Vector2(16, 8), Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D/HitDetector/HitCollision2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8tgre"]
_data = {
"RESET": SubResource("Animation_er3ou"),
"swing": SubResource("Animation_yclm6")
}

[node name="WeaponMace" type="Node2D"]
script = ExtResource("1_0j34j")
damage = 5.0

[node name="SwingDetector" type="Area2D" parent="."]
scale = Vector2(0.715278, 0.715278)
collision_layer = 2
collision_mask = 2

[node name="SwingCollision2D" type="CollisionShape2D" parent="SwingDetector"]
position = Vector2(19.5728, 13.9806)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_4ersa")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1, 1.375)
texture = ExtResource("1_ijnk0")
hframes = 5
vframes = 5
frame = 20

[node name="HitDetector" type="Area2D" parent="Sprite2D"]
collision_layer = 2
collision_mask = 2

[node name="HitCollision2D" type="CollisionShape2D" parent="Sprite2D/HitDetector"]
visible = false
shape = SubResource("CapsuleShape2D_uxfag")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8tgre")
}

[connection signal="body_entered" from="SwingDetector" to="." method="_on_swing_detector_body_entered"]
[connection signal="body_exited" from="SwingDetector" to="." method="_on_swing_detector_body_exited"]
[connection signal="body_entered" from="Sprite2D/HitDetector" to="." method="_on_area_2d_body_entered"]
